<resources>
    <string name="app_name">b10709029_hw2</string>
    <string name="default_guest_name">[Guest name]</string>
    <string name="default_party_size">\?</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="text_name">Name</string>
    <string name="text_num">Number</string>
    <string name="guest_name_hint">Guest Name</string>
    <string name="party_size_hint">number max(99)</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">CANCEL</string>

    <!--PREFERENCE-->
    <string name="pref_color_lable">Background Color</string>
    <!-- Label for red color preference -->
    <string name="pref_color_label_red">Red</string>
    <!-- Label for blue color preference -->
    <string name="pref_color_label_blue">Blue</string>
    <!-- Label for green color preference -->
    <string name="pref_color_label_green">Green</string>



    <!-- Key name for color preference in SharedPreferences -->
    <string name="pref_color_key" translatable="false">color</string>

    <!-- Value in SharedPreferences for red color option -->
    <string name="pref_color_red_value" translatable="false">red</string>

    <!-- Value in SharedPreferences for blue color option -->
    <string name="pref_color_blue_value" translatable="false">blue</string>

    <!-- Value in SharedPreferences for green color option -->
    <string name="pref_color_green_value" translatable="false">green</string>



    <!--summary-->
    <string name="pref_show_red">Red</string>
    <string name="pref_show_blue">Blue</string>
    <string name="pref_show_green">Green</string>
</resources>
