<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.example.b10709029_hw2.AddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_name"
            android:textSize="20dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <EditText
            android:id="@+id/person_name_edit_text"
            android:layout_width="250dp"
            android:layout_height="wrap_content"

            android:hint="@string/guest_name_hint"
            android:inputType="textPersonName|textCapWords"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_num"
            android:textSize="20dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <EditText
            android:id="@+id/party_count_edit_text"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/party_size_hint"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="2"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
    </LinearLayout>
    <!--android:onClick="addToWaitlist-->

    <Button
        android:id="@+id/btn_ok_and_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:onClick="addToWaitlist"
        android:text="@string/btn_ok"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse" />
    <Button
        android:id="@+id/btn_cancel_and_return"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/btn_cancel"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse" />
</LinearLayout>